test/unit-tests/errors/empty-match-error.spec.d.ts
export declare class EmptyMatchErrorTests {
    shouldBeEmptyMessage(): void;
    shouldNotBeEmptyMessage(): void;
    doesNotDoubleQuoteStrings(): void;
}
